fix spacing between windows on group page

--- a/src/components/personalCalendar.css
+++ b/src/components/personalCalendar.css
@@ -46,6 +46,7 @@
   overflow: scroll;
   white-space: nowrap;
   border-radius: 15px;
+  margin-left: 40px;
 }
 
 .user-scroll-list {
@@ -204,6 +205,7 @@
   width: 280px;
   border-radius: 15px;
   background-color: rgba(15, 15, 15, 0.44);
+  margin-left: 40px;
 }
 
 .group-select-section1 {
